# mvtsbuilder

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mvtsbuilder/: __init__.py  mvtsbuilder.py
src/mvtsbuilder/classes/: engineer.py  episode.py  player.py  project.py  querier.py
src/mvtsbuilder/data/: demo_csv_source_dict.json
src/mvtsbuilder/functions/: agg_df_fix.py  cohort_fillna.py  fix_df_raw.py  get_df_raw_from_csv.py  make_episodes_ts.py  make_mvts_df_from_csv.py  make_mvts_df_from_csv_pool.py  make_mvts_tfds_from_df.py  make_sample_info_from_csv.py  make_sbjs_ts.py
tests/: test_mvtsbuilder.py
