[tool.poetry]
name = "mvtsbuilder"
version = "0.1.0"
description = "Build d machine learning friendly MVTS( (multi-variable time series) dataframe or tensorflow dataset from raw data of csv or db format."
authors = ["Jiaxing Qiu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
sklearn = "^0.0"
seaborn = "^0.12.0"
tensorflow = {version = "2.10.0", python = ">=3.7, <3.11"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
