[tool.poetry]
name = "mvtsbuilder"
version = "0.1.0"
description = "Build machine learning friendly MVTS (multi-variable time series) dataframe or tensorflow dataset from raw data of csv or db format."
authors = ["Jiaxing Qiu"]
license = "MIT"
readme = "README.md"
include = ["data/*"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
sklearn = "^0.0"
seaborn = "^0.12.0"
tensorflow = {version = "2.10.0", python = ">=3.7, <3.11"}
jupyter = {version = "1.0.0", python = ">=3.7, <3.11"}
missingno = "^0.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
