[tool.poetry]
name = "mvtsbuilder"
version = "0.1.2"
description = "Build Multi-variable Time Series (MVTS) pandas dataframe or tensorflow dataset, by uniforming multiple sources of raw data in csv format or database format to use in the same ML project."
authors = ["Jiaxing Qiu"]
license = "MIT"
readme = "README.md"
include = ["data/*"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
sklearn = "^0.0"
scikit-learn = "^1.2.0"
seaborn = "^0.12.0"
tensorflow = "^2.10.0"
jupyter = "^1.0.0"
missingno = "^0.5.1"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"